# substrate

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  mise.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
crates/substrate-archive/: Cargo.toml
crates/substrate-archive/benches/: archive_hash_bench.rs  gzip_bench.rs
crates/substrate-archive/src/: dest_jail.rs  gzip_compress.rs  gzip_decompress.rs  hash.rs  hints_helpers.rs  lib.rs  manifest.rs  resource_limit.rs  response.rs  symlink_guard.rs  tar_create.rs  tar_extract.rs  tmp_path.rs  zip_create.rs  zip_extract.rs  zip_slip_guard.rs
crates/substrate-config/: Cargo.toml
crates/substrate-config/src/: lib.rs  loader.rs  model.rs
crates/substrate-domain/: Cargo.toml
crates/substrate-domain/src/: capabilities.rs  errors.rs  hints.rs  lib.rs
crates/substrate-domain/src/jobs/: bucket.rs  config.rs  entry.rs  mod.rs  progress.rs  state.rs
crates/substrate-domain/src/launch/: errors.rs  event.rs  mod.rs  profile.rs  stack.rs  state.rs  trust.rs
crates/substrate-domain/src/network/: mod.rs  request.rs  socket.rs  stats.rs
crates/substrate-domain/src/ports/: dir_walker.rs  factory.rs  fs_index.rs  fs_watcher.rs  hash.rs  job_notifier.rs  job_registry.rs  launch.rs  mod.rs  network_info.rs  path_jail.rs  stat.rs  state_transition.rs  stream_observer.rs  subprocess.rs
crates/substrate-domain/src/subprocess/: errors.rs  handle.rs  mod.rs  pagination.rs  request.rs  state.rs  stream.rs  supervisor.rs
crates/substrate-domain/src/value_objects/: client_id.rs  correlation_id.rs  idempotency_key.rs  jailed_path.rs  job_id.rs  mod.rs  page_cursor.rs  pagination.rs  process_group.rs  stack_id.rs  subprocess_id.rs
crates/substrate-fs-index/: Cargo.toml
crates/substrate-fs-index-macos-sys/: Cargo.toml
crates/substrate-fs-index-macos-sys/src/: lib.rs
crates/substrate-fs-index/src/: factory.rs  lib.rs  null.rs  polling.rs  rebuild.rs  snapshot.rs  tmp_filter.rs  watcher.rs  write_through.rs
crates/substrate-fs-index/src/linux/: mod.rs
crates/substrate-fs-index/src/macos/: mod.rs
crates/substrate-fs-mutation/: Cargo.toml
crates/substrate-fs-mutation/src/: copy.rs  elicitation.rs  hints_helpers.rs  lib.rs  mkdir.rs  preflight.rs  remove.rs  rename.rs  response.rs  set_permissions.rs  symlink.rs  tmp_path.rs  touch.rs  write.rs  write_through.rs
crates/substrate-fs-query/: Cargo.toml
crates/substrate-fs-query/benches/: hash_bench.rs  walker_bench.rs
crates/substrate-fs-query/src/: find.rs  hash.rs  hash_factory.rs  hint_helpers.rs  lib.rs  read.rs  read_dir.rs  response.rs  stat.rs  stat_factory.rs  symlink_chain.rs  walker_factory.rs
crates/substrate-fs-query/src/walker/: legacy.rs  linux.rs  macos.rs  mod.rs
crates/substrate-jobs/: Cargo.toml
crates/substrate-jobs/benches/: registry_bench.rs
crates/substrate-jobs/src/: cancel.rs  entry_state.rs  lib.rs  notifier.rs  quota.rs  registry.rs  throttle.rs  ttl_gc.rs
crates/substrate-launch/: Cargo.toml
crates/substrate-launch/src/: control_fifo.rs  dag.rs  detached.rs  env_file.rs  lib.rs  pid_probe.rs  profile_loader.rs  reaper.rs  redaction.rs  registry.rs  supervisor.rs  supervisor_registry.rs  trust_store.rs
crates/substrate-mcp-server/: Cargo.toml
crates/substrate-mcp-server/src/: audit.rs  capability_probe.rs  composition.rs  config_loader.rs  logging.rs  main.rs  null_id_shim.rs  signal_handlers.rs  stub_ports.rs
crates/substrate-mcp-server/src/handlers/: dispatcher.rs  initialize.rs  job_tools.rs  launch_tools.rs  mod.rs  network_tools.rs  rmcp_progress_notifier.rs  rmcp_stream_notifier.rs  service.rs  subprocess_tools.rs
crates/substrate-mcp-server/tests/: cucumber.rs  mcp_job_flow.rs  mcp_smoke.rs  mcp_wait_ms_default_substitution.rs
crates/substrate-mcp-server/tests/fixtures/subprocess_sleeper/: Cargo.toml
crates/substrate-mcp-server/tests/fixtures/subprocess_sleeper/src/: main.rs
crates/substrate-mcp-server/tests/fixtures/subprocess_stdout_writer/src/: main.rs
crates/substrate-mcp-server/tests/steps/: archive.rs  cross_cutting.rs  filesystem_mutation.rs  filesystem_query.rs  job.rs  mod.rs  network.rs  process.rs  system_info.rs  text_processing.rs
crates/substrate-mcp-server/tests/steps/launch/: dependency.rs  events.rs  lifecycle.rs  milestone2.rs  mod.rs  reload.rs  server.rs  trust.rs
crates/substrate-mcp-server/tests/steps/subprocess/: cancel.rs  capture.rs  cascade.rs  elicitation.rs  mod.rs  policy.rs  quota.rs  reaper.rs  watchdog.rs
crates/substrate-network-info/: Cargo.toml
crates/substrate-network-info/src/: factory.rs  lib.rs  linux.rs  macos.rs  state.rs
crates/substrate-policy/: Cargo.toml
crates/substrate-policy/src/: allowlist.rs  jail_factory.rs  lib.rs  nfc.rs  userspace_jail.rs
crates/substrate-policy/src/linux/: mod.rs
crates/substrate-policy/src/macos/: mod.rs
crates/substrate-process/: Cargo.toml
crates/substrate-process/src/: hints_helpers.rs  lib.rs  list.rs  pid_allowlist.rs  process_info.rs  response.rs  signal.rs  signal_policy.rs  stats.rs  top.rs  tree.rs
crates/substrate-process/src/scanner/: linux.rs  macos.rs  mod.rs
crates/substrate-signal-sys/: Cargo.toml
crates/substrate-signal-sys/src/: lib.rs
crates/substrate-subprocess/: Cargo.toml
crates/substrate-subprocess/src/: cascade.rs  cleanup.rs  health_probe.rs  lib.rs  orphan_reaper.rs  pre_exec.rs  registry.rs  spawn.rs  stream_capture.rs  tmp_file.rs  watchdog.rs
crates/substrate-system-info/: Cargo.toml
crates/substrate-system-info/src/: cpu.rs  df.rs  hints_helpers.rs  hostname.rs  info.rs  lib.rs  load_average.rs  mem.rs  response.rs  uname.rs  uptime.rs
crates/substrate-text/: Cargo.toml
crates/substrate-text/benches/: count_lines_bench.rs  simdutf8_bench.rs  text_search_bench.rs
crates/substrate-text/src/: binary_detect.rs  count_lines.rs  head.rs  hints_helpers.rs  lib.rs  pagination.rs  regex_guard.rs  response.rs  search.rs  tail.rs
(+331 files in other folders)
