[package]
name = "substrate-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Figment-based TOML + env runtime config loader for substrate (ADR-0006)."

[lints]
workspace = true

[dependencies]
substrate-domain = { path = "../substrate-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
