[package]
name = "substrate-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-domain shared kernel: ports, value objects, errors. Zero infra deps."
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }
