[package]
name = "substrate-fs-index-macos-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI shim for macOS-specific syscalls used by substrate-fs-index. Not for public consumption."
publish = false

[lib]
path = "src/lib.rs"

# This crate deliberately does NOT inherit workspace lints (`[lints]
# workspace = true` is omitted). The workspace lint table sets
# `unsafe_code = "deny"`, which would conflict with the intentional unsafe
# FFI code in this shim. All unsafe blocks carry SAFETY comments per ADR-0042.
# Per-crate override: only `missing_docs` is kept as a reminder.
[lints.rust]
missing_docs = "warn"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
