[package]
name = "substrate-launch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Launch BC adapter: declarative process orchestration over SubprocessPort. ADR-0063..0069."

[lints]
workspace = true

[dependencies]
substrate-domain = { path = "../substrate-domain" }
substrate-policy  = { path = "../substrate-policy" }
tokio = { workspace = true, features = ["rt", "macros", "fs", "sync", "time", "signal"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# toml declared locally per plan (matches workspace version but noted as FLAG for reviewers).
toml = { workspace = true }
# blake3: mmap DISABLED per ADR-0032; uses workspace declaration.
blake3 = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

# Linux-only: single-pid start-time + ppid reads via /proc for the reaper's
# PID-recycle guard (ADR-0068). Version pinned to match sibling crate
# substrate-process for consistency. macOS reads kinfo_proc via the already-present
# workspace `libc` (sysctl), so no macOS-target-specific entry is needed here.
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
