[package]
name = "substrate-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "substrate MCP server binary. Composition root. STDIO transport only."
default-run = "substrate"

[lints]
workspace = true

[features]
default = ["simd-baseline", "fs-index"]
simd-baseline = []
simd-avx2 = ["simd-baseline"]
simd-avx512 = ["simd-avx2"]
simd-neon = ["simd-baseline"]
fast-json = []
fast-zlib = []
fast-deflate = []
fs-index = ["substrate-fs-index/fs-index", "substrate-fs-mutation/fs-index"]
fs-index-watch = ["fs-index", "substrate-fs-index/fs-index-watch"]
outbound-net = ["tokio/net"]
subprocess = ["dep:substrate-subprocess"]

[dependencies]
substrate-domain = { path = "../substrate-domain" }
substrate-signal-sys = { path = "../substrate-signal-sys" }
substrate-config = { path = "../substrate-config" }
substrate-policy = { path = "../substrate-policy" }
substrate-jobs = { path = "../substrate-jobs" }
substrate-fs-index = { path = "../substrate-fs-index" }
substrate-fs-query = { path = "../substrate-fs-query" }
substrate-fs-mutation = { path = "../substrate-fs-mutation" }
substrate-process = { path = "../substrate-process" }
substrate-system-info = { path = "../substrate-system-info" }
substrate-text = { path = "../substrate-text" }
substrate-archive = { path = "../substrate-archive" }
substrate-subprocess = { path = "../substrate-subprocess", optional = true }

rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "time",
    "sync",
    "signal",
    "fs",
] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
cucumber = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Always-on for test compilation: subprocess crate directly available to cucumber harness.
# The subprocess feature gate in src/ still controls composition-root wiring.
# To run subprocess cucumber scenarios: cargo test --test cucumber --features subprocess
substrate-subprocess = { path = "../substrate-subprocess" }

[[bin]]
name = "substrate"
path = "src/main.rs"

# Fixture binary for subprocess stream-capture cucumber tests.
# Accessible via env::var("CARGO_BIN_EXE_subprocess_stdout_writer") in the harness.
[[example]]
name = "subprocess_stdout_writer"
path = "tests/fixtures/subprocess_stdout_writer/src/main.rs"

# Fixture binary for subprocess lifecycle/cascade/watchdog cucumber tests.
# Accessible via env::var("CARGO_BIN_EXE_subprocess_sleeper") in the harness.
[[example]]
name = "subprocess_sleeper"
path = "tests/fixtures/subprocess_sleeper/src/main.rs"

[[test]]
name = "cucumber"
harness = false
